log/build_2023-11-18_16-04-48/joystick_sub/stderr.log
  File "/home/aiclub/Desktop/TEL_Robot/install/joystick_sub/lib/python3.8/site-packages/joystick_sub/gyrosensor.py", line 29
    print("%10.3f", %self.imu.get_angular_velocity()[2]/100.0)
                    ^
SyntaxError: invalid syntax

